fixed spacing on left side

--- a/src/Components/Resume.scss
+++ b/src/Components/Resume.scss
@@ -3,18 +3,12 @@
     padding: 0;
 
     .resume-left-col {
-      margin-top: 0;
-
       .left-div {
         text-align: center;
 
         img {
           height: 200px;
         }
-      }
-
-      h2 {
-        padding-top: 2em;
       }
 
       h4 {
